feat: Financial Planning feature
